--- a/src/home.css
+++ b/src/home.css
@@ -104,6 +104,18 @@ a:hover {
 
 body {font-family: Arial, Helvetica, sans-serif;}
 
+.feature-row__image-wrapper {
+  position: relative;
+  overflow: hidden;
+  width: 50%;
+}
+
+.feature-row__text {
+  padding: 140px 40px;
+  margin: 0 auto;
+  max-width: 500px;
+}
+
 .baseline {
     margin-top: 10px;
     font-size: 1.25rem;
@@ -137,4 +149,37 @@ body {font-family: Arial, Helvetica, sans-serif;}
     margin-top: 50px;
     margin-bottom: 30px;
     font-style: italic;
+}
+
+/* Contact Us CSS*/
+
+.btn {
+  appearance: none;
+  display: inline-block;
+  position: relative;
+  width: auto;
+  background-color: #eb4f47;
+  border-radius: 0;
+  color: #fff;
+  border: 2px solid #eb4f47;
+  font-size: 1.2rem;
+  font-weight: 700;
+  letter-spacing: 2px;
+  text-decoration: none;
+  text-align: center;
+  text-transform: uppercase;
+  padding: 10px 30px;
+  line-height: 2.2;
+  vertical-align: middle;
+  cursor: pointer;
+  transition: outline 0.1s linear;
+  box-sizing: border-box;
+}
+
+.grid {
+  zoom: 1;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  margin-left: -20px;
 }
