--- a/src/home.css
+++ b/src/home.css
@@ -104,6 +104,12 @@ a:hover {
 
 body {font-family: Arial, Helvetica, sans-serif;}
 
+.feature-row {
+  display: flex;
+  width: 100%;
+  align-items: stretch;
+}
+
 .feature-row__image-wrapper {
   position: relative;
   overflow: hidden;
@@ -182,4 +188,10 @@ body {font-family: Arial, Helvetica, sans-serif;}
   margin: 0;
   padding: 0;
   margin-left: -20px;
+}
+
+.grid__item {
+  float: left;
+  padding-left: 20px;
+  width: 100%;
 }
